<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ImageSearch</string>
    <string name="action_settings">Settings</string>
    <string name="btnSearch">Search</string>
    <string name="hintSearchTerm">Enter Search Term</string>
    <string name="title_activity_image_display">ImageDisplay</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_filter">FilterActivity</string>
    <string name="title_activity_search_options">SearchOptions</string>
    <string name="advanced_search_options">Advanced Search Options</string>
	<string name="image_size">Image Size</string>
    <string name="color_filter">Color Filter</string>
    <string name="image_type">Image Type</string>
    <string name="site_filter">Site Filter</string>
    <string name="save">Save</string>
    
</resources>
